--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "myform",
   "version": "0.1.0",
   "private": true,
+   "engines": {
+    "node": "15.0.10",
+    "npm": "7.5.6"
+  },
   "dependencies": {
     "@shopify/polaris": "^6.3.0",
     "@testing-library/jest-dom": "^5.11.10",
